--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Publish docker image
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  extension_ci:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,14 +17,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: "recursive"
-
-      - name: Setup Node.js 14
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-
-      - name: Install Node Dependencies
-        run: yarn
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -35,5 +27,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
           tags: espressif/idf-web-ide:latest
