--- a/extensions/base.tsconfig.json
+++ b/extensions/base.tsconfig.json
@@ -14,12 +14,17 @@
         "resolveJsonModule": true,
         "module": "commonjs",
         "moduleResolution": "node",
-        "target": "es5",
+        "target": "ES2017",
         "jsx": "react",
         "lib": [
-            "es6",
+            "ES2017",
             "dom"
         ],
-        "sourceMap": true
-    }
+        "sourceMap": true,
+        "rootDir": "src",
+        "outDir": "lib"
+    },
+    "include": [
+        "src"
+    ]
 }
