--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "private": true,
   "scripts": {
     "prepare": "lerna run prepare",
-    "rebuild:browser": "theia rebuild:browser"
+    "rebuild:browser": "theia rebuild:browser",
+    "rebuild:electron": "theia rebuild:electron",
+    "start:browser": "yarn rebuild:browser && yarn --cwd browser-app start --hostname=0.0.0.0 --port=8080",
+    "start:electron": "yarn rebuild:electron && yarn --cwd electron-app start",
+    "watch": "lerna run --parallel watch"
   },
   "devDependencies": {
     "lerna": "2.4.0"
