finish working webserial with terminal output

--- a/browser-app/package.json
+++ b/browser-app/package.json
@@ -15,9 +15,10 @@
     "@theia/preview": "latest",
     "@theia/process": "latest",
     "@theia/terminal": "latest",
-    "@theia/workspace": "latest",
     "@theia/vsx-registry": "latest",
+    "@theia/workspace": "latest",
     "bson": "^4.0.2",
+    "crypto-js": "^4.0.0",
     "esp-remote-flasher": "0.0.1",
     "esp-remote-monitor": "0.0.1",
     "esp-remote-welcome-page": "0.0.1",
@@ -26,7 +27,8 @@
   },
   "devDependencies": {
     "@theia/cli": "latest",
-    "@types/bson": "^4.0.0"
+    "@types/bson": "^4.0.0",
+    "@types/crypto-js": "^4.1.1"
   },
   "scripts": {
     "prepare": "yarn build && theia download:plugins",
