--- a/extensions/esp-webserial/package.json
+++ b/extensions/esp-webserial/package.json
@@ -9,7 +9,8 @@
     "src"
   ],
   "dependencies": {
-    "@theia/core": "latest"
+    "@theia/core": "latest",
+    "pako": "^2.0.4"
   },
   "devDependencies": {
     "rimraf": "latest",
@@ -23,7 +24,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/browser/esp-webserial-frontend-module"
+      "frontend": "lib/browser/esp-webserial-frontend-module",
+      "backend": "lib/node/esp-webserial-backend-module"
     }
   ]
 }
