use esptool js as external dependency

--- a/extensions/esp-webserial/package.json
+++ b/extensions/esp-webserial/package.json
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "@theia/core": "latest",
-    "pako": "^2.0.4"
+    "esptool-js": "^0.1.0"
   },
   "devDependencies": {
     "rimraf": "latest",
