--- a/extensions/esp-webserial/package.json
+++ b/extensions/esp-webserial/package.json
@@ -10,10 +10,12 @@
   ],
   "dependencies": {
     "@theia/core": "latest",
-    "esptool-js": "^0.3.1"
+    "esptool-js": "^0.3.1",
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
     "@types/w3c-web-serial": "^1.0.3",
+    "@types/crypto-js": "^4.1.1",
     "rimraf": "latest",
     "typescript": "latest"
   },
